# neaty_agent_AI

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_DOCKER.md  agents-cli-manifest.yaml  context.md  deploy_gcp.ps1  deploy_gcp.sh  deployment_metadata.json  docker-compose.yml  eval_set_1.evalset.json  hooks.py  kaggle_writeup.md  neaty_agent.py  project_description.md  pyproject.toml  requirements.txt  rules.yaml  validate_tool_call.py  web_server.py
.agents/skills/neaty-assistant/: SKILL.md
app/: agent.py  agent_runtime_app.py  neaty_agent.py  pubsub_manager.py  test_security.py  validate_tool_call.py  web_server.py
app/app_utils/: telemetry.py  typing.py
app/my-skill/: SKILL.md
data/: MULTI_AGENT_SPEC.md  Pollution Pattern Analysis.docx  data-analysis-2026-06-15 08-25-50.csv
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
static/: app.js  index.html  style.css
