[project]
name = "neaty"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.3.0",
    "python-dotenv",
    "pydantic",
    "google-cloud-pubsub>=2.13.0",
    "google-cloud-aiplatform[agent_engines]",
    "google-cloud-logging",
]

[project.optional-dependencies]
lint = [
    "ruff",
    "codespell",
]
